force-app/main/default/objects/Default_Project_Team__c/Default_Project_Team__c.object-meta.xml
<CustomObject>
    <label>Default Project Team</label>
    <nameField>
        <displayFormat>DPTN-{00000000}</displayFormat>
        <label>Default Project Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Default Project Teams</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>