force-app/main/default/objects/Default_Project_Team__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Default Project Team</relationshipLabel>
    <relationshipName>Default_Project_Teams1</relationshipName>
    <type>Lookup</type>
</CustomField>