force-app/main/default/objects/Default_Project_Team__c/fields/Project_Access__c.field-meta.xml
<CustomField>
    <fullName>Project_Access__c</fullName>
    <label>Project Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Project_Access</valueSetName>
    </valueSet>
</CustomField>